--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "husky install"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-web": "^0.18.12",
+    "styled-components": "^6.0.0-rc.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "husky": "^8.0.3",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.9.4"
   },
   "private": true
